# mcpipe

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  mcpipe-feedback.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
scripts/: release.sh  update_coverage_badge.py  update_toc.py
src/mcpipe/: __init__.py  __main__.py  _schema.py  _version.py  authoring.py  bootstrap.py  cache.py  config.py  framework.py  log.py  plugin.py  server.py  transform.py
src/mcpipe/cli/: args.py  main.py
src/mcpipe/plugins/: docker.py  filesystem.py  git.py
src/mcpipe/transforms/: builtins.py
src/mcpipe/types/: protocol.py
tests/: conftest.py  test_authoring.py  test_bootstrap.py  test_cache.py  test_cli_args.py  test_cli_main.py  test_config.py  test_framework.py  test_log.py  test_main_entrypoint.py  test_plugin.py  test_plugin_docker.py  test_plugin_filesystem.py  test_plugin_git.py  test_security.py  test_server.py  test_transform.py  test_transforms_builtins.py
