[project]
name = "mcpipe"
version = "0.1.1"
description = "Plugin-based MCP server framework — routes any CLI tool through Source → Executor → Sink pipelines"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = []
keywords = ["mcp", "model-context-protocol", "llm", "plugin", "cli", "pipeline"]
authors = [
    { name = "David Kristiansen" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/davetothek/mcpipe"
Repository = "https://github.com/davetothek/mcpipe"
Issues = "https://github.com/davetothek/mcpipe/issues"
Changelog = "https://github.com/davetothek/mcpipe/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
    "commitizen>=4.6.0",
    "debugpy>=1.8.20",
    "poethepoet>=0.46.0",
    "pytest>=9.0.3",
    "pytest-cov>=6.0",
    "ruff>=0.15.13",
    "ty>=0.0.37",
]

[project.scripts]
mcpipe = "mcpipe.__main__:cli"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcpipe"]

[tool.uv]
package = true
link-mode = "copy"

[tool.ruff]
line-length = 88
cache-dir = ".cache/ruff"

[tool.ruff.lint]
fixable = ["ALL"]

select = [
  "TID252", # Disallow relative imports from parent directories (i.e., 'from ..core import x')
  "E",      # Enforce PEP 8 style guide (whitespace and formatting rules)
  "F",      # Pyflakes checks for logical errors (e.g., unused variables, undefined names)
  "I",      # isort ensures imports are sorted properly
  "W",      # Handle warnings from pycodestyle
  "B",      # Find common bugs with flake8-bugbear
  "C4",     # Improve list comprehensions with flake8-comprehensions
  "UP",     # Utilize pyupgrade for automatic syntax upgrades
]

[tool.pytest.ini_options]
cache_dir = ".cache/pytest"
addopts = "--no-header -q --cov=mcpipe --cov-report=term-missing --cov-report=xml:.cache/coverage/coverage.xml --junitxml=.cache/coverage/pytest-report.xml"

[tool.coverage.run]
source = ["mcpipe"]
data_file = ".cache/coverage/.coverage"

[tool.coverage.report]
show_missing = true
skip_empty = true
exclude_lines = [
    "if __name__",
    "pragma: no cover",
]

[tool.ty.environment]
extra-paths = ["src"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.poe.tasks]
test = { sequence = ["_pytest", "_update_badge"], help = "Run tests and update coverage badge" }
_pytest = "pytest"
_update_badge = "python scripts/update_coverage_badge.py"
lint = "ruff check . --fix"
format = "ruff format ."
typecheck = "ty check src tests"
check  = { sequence = ["lint", "typecheck", "test"], help = "Run lint + typecheck + tests" }
release = { help = "Bump version, update changelog, tag, and push", cmd = "bash scripts/release.sh" }
hooks = { help = "Install git hooks", cmd = "cp scripts/pre-commit .git/hooks/pre-commit && chmod +x .git/hooks/pre-commit" }
clean = { help = "Remove build artifacts and cache files", cmd = "rm -rf dist/ build/ **/*.egg-info/ .cache/ htmlcov/ .ruff_cache/ .mypy_cache/ **/__pycache__/" }
build = { help = "Build wheel and sdist", cmd = "uv build" }
docs = { help = "Build HTML documentation", cmd = "bash scripts/docs.sh" }

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "semver"
version_provider = "pep621"
update_changelog_on_bump = true
changelog_file = "CHANGELOG.md"
